<resources>
  <string name="app_name">WalletObserver</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>

  <!--Pad items-->
  <string name="msg_invalid_expression">Invalid expression</string>

  <string name="sign_up_welcome">Sign up to create a secure account</string>
  <string name="sign_up_tos">I\'ve reviewed and agree to the Terms of Services and Privacy Policy regarding the consent for the use of my personal data.</string>
  <string name="sign_up_connect_with_google">Connect with Google</string>
  <string name="sign_up_connect_with_facebook">Connect with Facebook</string>
  <string name="sign_up_log_in">Already have an account? Log In</string>
  <string name="sign_up_accept_tos">You must agree with our Terms &amp; Conditions before you cna continue</string>

  <string name="ac" translatable="false">AC</string>
  <string name="value_update" translatable="false">+/-</string>
  <string name="percentage" translatable="false">%</string>
  <string name="divide" translatable="false">÷</string>
  <string name="divide_operator" translatable="false">/</string>
  <string name="seven" translatable="false">7</string>
  <string name="eight" translatable="false">8</string>
  <string name="nine" translatable="false">9</string>
  <string name="multiply" translatable="false">x</string>
  <string name="multiply_expression" translatable="false">*</string>
  <string name="four" translatable="false">4</string>
  <string name="five" translatable="false">5</string>
  <string name="six" translatable="false">6</string>
  <string name="plus" translatable="false">+</string>
  <string name="one" translatable="false">1</string>
  <string name="two" translatable="false">2</string>
  <string name="three" translatable="false">3</string>
  <string name="minus" translatable="false">-</string>
  <string name="zero" translatable="false">0</string>
  <string name="comma" translatable="false">,</string>
  <string name="comma_expression" translatable="false">.</string>
  <string name="equals" translatable="false">=</string>

  <string name="drawer_home">Home</string>
  <string name="drawer_records">Records</string>
  <string name="drawer_debts">Debts</string>
  <string name="drawer_goals">Goals</string>
  <string name="drawer_shopping_lists">Shopping Lists</string>
  <string name="drawer_add_record">Add Record</string>

  <string name="intro_go_exclamation">Go!</string>
  <string name="intro_next">Next</string>
  <string name="intro_skip">Skip</string>

  <string name="initial_settings_enter_amount_of_money">Enter the amount of money you have now</string>

  <string name="title_welcome_exclamation">Welcome!</string>
  <string name="title_category">Category</string>
  <string name="title_transfer">Transfer</string>
  <string name="title_expense_slash_income">Expense/Income</string>
  <string name="title_none">None</string>

</resources>
