<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_navigation"
  app:startDestination="@id/homeFragment">

  <fragment
    android:id="@+id/homeFragment"
    android:name="com.grappim.walletobserver.ui.home.HomeFragment"
    android:label="@string/drawer_home"
    tools:layout="@layout/fragment_home">
    <action
      android:id="@+id/nextFragment"
      app:destination="@id/addRecordFragment" />
  </fragment>

  <fragment
    android:id="@+id/recordsFragment"
    android:name="com.grappim.walletobserver.ui.records.RecordsFragment"
    android:label="@string/drawer_records"
    tools:layout="@layout/fragment_records">
    <action
      android:id="@+id/nextFragment"
      app:destination="@id/addRecordFragment" />
  </fragment>

  <fragment
    android:id="@+id/debtsFragment"
    android:name="com.grappim.walletobserver.ui.debts.DebtsFragment"
    android:label="@string/drawer_debts"
    tools:layout="@layout/fragment_debts" />

  <fragment
    android:id="@+id/goalsFragment"
    android:name="com.grappim.walletobserver.ui.goals.GoalsFragment"
    android:label="@string/drawer_goals"
    tools:layout="@layout/fragment_goals" />

  <fragment
    android:id="@+id/shoppingListsFragment"
    android:name="com.grappim.walletobserver.ui.shopping_lists.ShoppingListsFragment"
    android:label="@string/drawer_shopping_lists"
    tools:layout="@layout/fragment_shopping_lists" />

  <fragment
    android:id="@+id/addRecordFragment"
    android:name="com.grappim.walletobserver.ui.add_record.AddRecordFragment"
    android:label="@string/drawer_add_record"
    tools:layout="@layout/fragment_add_record_new">
    <action
      android:id="@+id/nextFragment"
      app:destination="@id/chooseCategoryFragment" />
  </fragment>

  <fragment
    android:id="@+id/chooseCategoryFragment"
    android:name="com.grappim.walletobserver.ui.choose_category.ChooseCategoryFragment"
    android:label="Choose Category"
    tools:layout="@layout/fragment_choose_category">
    <action
      android:id="@+id/nextFragment"
      app:destination="@id/chooseSubcategoryFragment">
      <argument
        android:name="categoryId"
        app:argType="string" />
    </action>
  </fragment>

  <fragment
    android:id="@+id/chooseSubcategoryFragment"
    android:name="com.grappim.walletobserver.ui.choose_category.choose_subcategory.ChooseSubcategoryFragment"
    android:label="Choose subcategory"
    tools:layout="@layout/fragment_choose_subcategory">
    <argument
      android:name="categoryId"
      app:argType="string" />
  </fragment>

</navigation>